--- a/Hardware.html
+++ b/Hardware.html
@@ -39,7 +39,7 @@
 <div>
 <h2> Output Devices</h2>
 <img src=output.jpeg width="150px">
-<p> Output Devices take the processed information in binary, and communicates it back to the user after interpreting the numbers. Some examples of output devices are screen, speaker, printer, and more.
+<p> Output Devices take the processed information in binary, and communicates it back to the user after interpretation. Some examples of output devices are screen, speaker, printer, and more.
 </p>
 <a href="#contents">Back to Table of Contents</a>
 </div>
@@ -57,7 +57,7 @@
 <div>
 <h2> Arthmetic Logic Unit (ALU)</h2>
 <img src="alu.jpg" width="140px">
-<p> The Arthmetic logic unit, or ALU, is an extention of the CPU. It is controlled by the control unit to preform simple arthmetic operations, and sends the answer back when it's done.
+<p> The Arthmetic logic unit, or ALU, is an extention of the CPU. It is controlled by the control unit to preform simple arthmetic operations. It will send the answers back when it's done.
 </p>
 <a href="#contents">Back to Table of Contents</a>
 </div>
@@ -84,7 +84,7 @@
 <div>
 <h2>Optical Memory</h2>
 <img src="optical.jpg" width="150px">
-<p>Examples of optical memory are CD's, and DVD's. Optical Memory is created by using low power lazer beams to encode the disk with binary dara. It is retrieved by using a low power lazer to scan the disk for data.
+<p>Examples of optical memory are CD's, and DVD's. Optical Memory is created by using low power lazer beams to encode the disk with binary data. It is retrieved by using a low power lazer to scan the disk for data.
 </p>
 <a href="#contents">Back to Table of Contents</a>
 </div>
@@ -93,7 +93,7 @@
 <div>
 <h2>Magnetic Memory</h2>
 <img src="magnetic.jpg" width="150px">
-<p> Magnetic memory is another method for storing memory. As the name suggests,it records data using magnetic properties. Magnetic memory has a longer life-span compared to optical and flash memory, and ability to rewrite.
+<p> Magnetic memory is another method for storing memory. As the name suggests,it records data using magnetic properties. Magnetic memory has a longer life-span compared to optical and flash memory. It also has ability to rewrite.
 </p>
 <a href="#contents">Back to Table of Contents</a>
 </div>
@@ -111,7 +111,7 @@
 <div>
 <h2>Logic Gates</h2>
 <img src="logic.jpg" width="150px" height="85px">
-<p> Logic gates are the very basis of any digital system. They take more than one input and produces one output based on a certain logic. Logic gates are named AND gate, OR gate, NOT gate.
+<p> Logic gates are the very basis of any digital system. They take more than one input and produce an output based on a certain logic. The most common logic gates are named AND gate, OR gate, NOT gate.
 </p>
 <a href="#contents">Back to Table of Contents</a>
 </div>
