--- a/Hardware.html
+++ b/Hardware.html
@@ -102,7 +102,7 @@
 <div>
 <h2>Flash Memory</h2>
 <img src="flash.jpg" width="150px">
-<p> Flash storage is often found in USB flash drives, SD cards, mobile phones, laptops, and more. Similat to RAM, it has the ability to electroniclly rewrite and erase, but Flash memory will retain its contents when power is off.
+<p> Flash storage is often found in USB flash drives, SD cards, mobile phones, laptops, and more. Similar to RAM, it has the ability to electroniclly rewrite and erase, but Flash memory will retain its contents when power is off.
 </p>
 <a href="#contents">Back to Table of Contents</a>
 </div>
